--- a/telemetry.html
+++ b/telemetry.html
@@ -121,7 +121,7 @@
       
       
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvw6RInTxTbh-gGvXHdSrWIEE43Je-E40&sensor=true"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvw6RInTxTbh-gGvXHdSrWIEE43Je-E40"
     async defer></script>
 
 
