--- a/telemetry.html
+++ b/telemetry.html
@@ -11,7 +11,7 @@
     <title>Portal 2.0</title>
     <style> 
     
-    #robotFrontCamera {
+    /* #robotFrontCamera {
       position: absolute;
       right: 20px;
       bottom: 50px;
@@ -29,7 +29,7 @@
       border-radius: 10px;
       height: 150px;
       z-index: 2;
-    }
+    } */
 
     .jumbotron{
         margin: 0;
@@ -98,7 +98,7 @@
             <iframe src="https://www.youtube.com/embed/GJYzDA3ur08" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
     -->
-    <div>
+    <!-- <div>
       <img id="robotFrontCamera" 
            src="http://211.23.31.192:82/GetData.cgi?CH=1" 
            class="img-responsive img-rounded detailimage" 
@@ -111,7 +111,7 @@
            class="img-responsive img-rounded detailimage" 
            alt="" 
            title="New South Wales, Sydney">
-  </div>
+  </div> -->
    
           <div id="map">
             
