Location sharing between 2 users working

--- a/telemetry.html
+++ b/telemetry.html
@@ -91,7 +91,10 @@
 
 <div class="jumbotron text-center">
         <div class="container">
-            <h1 id="main-header"> Monitor <strong> your</strong> robot.</h1>
+            <h1 id="main-header">  <!-- Monitor <strong> your </strong> robot. --> </h1> 
+            <button id = "share" class="button btn-info"> Share</button>
+            <button id = "view" class="button btn-info"> View</button>
+
         </div>
     </div>
     <!-- <div id="vid2" class="embed-responsive embed-responsive-16by9 w-25 p-8 float-right align-bottom">
