--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
     <title>Portal 2.0</title>
   </head>
   <body>
 
- <nav class="navbar navbar-expand-lg navbar-light bg-info" >
+ <nav class="navbar navbar-expand-lg navbar-dark" >
   <a class="navbar-brand" href="#">Portal 2.0</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -35,8 +35,8 @@
 </nav>
 
 
-<div class="jumbotron text-center">
-	<div class="container">
+<div class="text-center">
+	<div class="container" style="margin-top: 80px">
 		<h1> Welcome to the WAVE control center</h1>
 		<p>Please use the navbar to navigate</p>
 	</div>
