--- a/planning.html
+++ b/planning.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
 
     <title>Portal 2.0</title>
     <style> 
@@ -46,7 +47,7 @@
   </head>
   <body>
 
- <nav class="navbar navbar-expand-lg navbar-light bg-info" >
+ <nav class="navbar navbar-expand-lg navbar-dark" >
   <a class="navbar-brand" href="index.html">Portal 2.0</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -68,7 +69,7 @@
   </div>
 </nav>
 
-<div class="jumbotron text-center">
+<div class="text-center">
         <div class="container">
             <h1> Plan <strong> your</strong> path.</h1>
             <p>Drop pins at the source and destination.</p>
