--- a/telemetry.html
+++ b/telemetry.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
     <title>Portal 2.0</title>
     <style> 
     
@@ -68,7 +68,7 @@
   </head>
   <body>
 
- <nav class="navbar navbar-expand-lg navbar-dark" >
+ <nav class="navbar navbar-expand-lg navbar-dark bg-primary" >
   <a class="navbar-brand" href="index.html">Portal 2.0</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -93,10 +93,10 @@
 <div class="text-center">
         <div class="row"> 
             <div class="col-6"> 
-            <button id = "share" class="btn btn-outline-primary"> Share</button>
+            <button id = "share" style="margin-top:8px" class="btn btn-outline-primary"> Share</button>
             </div>
             <div class="col-6"> 
-            <button id = "view" class="btn btn-outline-primary"> View</button>
+            <button id = "view" style="margin-top:8px" class="btn btn-outline-primary"> View</button>
           </div> 
           <h1 class="col-12" id="main-header">  <!-- Monitor <strong> your </strong> robot. --> </h1> 
 
