--- a/planning.html
+++ b/planning.html
@@ -65,7 +65,7 @@
   margin-right: 20px;
   padding: 20px;
   padding-right: 50px; 
-
+  display: none;
   width: 500px;
   position: relative;
   right: 0px; 
