Giving corrections to heading

--- a/telemetry.html
+++ b/telemetry.html
@@ -154,7 +154,7 @@
       
       
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvw6RInTxTbh-gGvXHdSrWIEE43Je-E40"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvw6RInTxTbh-gGvXHdSrWIEE43Je-E40&libraries=geometry"
     async defer></script>
 
 
