--- a/planning.html
+++ b/planning.html
@@ -261,7 +261,7 @@ html, body {
 
 
     <script type="module" src="planning.js"> </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvw6RInTxTbh-gGvXHdSrWIEE43Je-E40"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvw6RInTxTbh-gGvXHdSrWIEE43Je-E40&libraries=geometry"
     async defer></script>
 
     
