Can insert markers at set index

--- a/planning.html
+++ b/planning.html
@@ -178,15 +178,19 @@ html, body {
     <div class="sidebar form-group text-center" id="sidebar">
       <form>
     <div class="row"> 
-        <div class="col-md-5">
+        <div class="col-md-4">
         <button id="undo" type="button" class="btn btn-danger">Undo</button>
         </div>
-        <div class="col-md-7"> 
-        <button type="button" class="close" id="close-side">
-                <span aria-hidden="true"> &times; </span>
-        </button>
-
+       
+        <div class="col-md-4">
+          <button id="insert" type="button" class="btn btn-danger"> Insert </button>
         </div>
+        <div class="col-md-4"> 
+          <button type="button" class="close" id="close-side">
+                  <span aria-hidden="true"> &times; </span>
+          </button>
+  
+          </div>
     </div>
     <br>
     <div class="row">
