Can add N spaced segments

--- a/planning.html
+++ b/planning.html
@@ -178,19 +178,26 @@ html, body {
     <div class="sidebar form-group text-center" id="sidebar">
       <form>
     <div class="row"> 
-        <div class="col-md-4">
+        <div class="col-md-6">
         <button id="undo" type="button" class="btn btn-danger">Undo</button>
         </div>
        
-        <div class="col-md-4">
-          <button id="insert" type="button" class="btn btn-danger"> Insert </button>
-        </div>
-        <div class="col-md-4"> 
+      
+        <div class="col-md-6"> 
           <button type="button" class="close" id="close-side">
                   <span aria-hidden="true"> &times; </span>
           </button>
   
           </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-md-5">
+        <button id="insert" type="button" class="btn btn-warning"> Insert </button>
+      </div>
+      <div class="col-md-7">
+        <input type="text"  style="width:50px" class="form-control pull-left" placeholder="2" value="2" id="seg_no"> 
+      </div>
     </div>
     <br>
     <div class="row">
