--- a/planning.html
+++ b/planning.html
@@ -179,7 +179,7 @@ html, body {
       <form>
     <div class="row"> 
         <div class="col-md-6">
-        <button id="undo" type="button" class="btn btn-danger">Undo</button>
+        <button id="undo" type="button" class="btn btn-danger">Delete</button>
         </div>
        
       
