First graph working

--- a/stats.html
+++ b/stats.html
@@ -8,9 +8,22 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
+    <link rel="stylesheet" href="./node_modules/dygraphs/dist/dygraph.min.css">
 
     <title>Portal 2.0</title>
+
+    <style>
+    #div-g{
+      position: absolute;
+    }
+    .container {
+      position: relative;
+    }
+    </style>
+
   </head>
+
+
   <body>
 
  <nav class="navbar navbar-expand-lg navbar-dark bg-primary" >
@@ -45,7 +58,10 @@
 <script src=stats.js>
 
 </script>
-<div class="container" id="chartContainer" style="height: 300px; width: 100%;"></div>
+<div class="container">
+  <div id="div_g" style="width:100%; height:300px;"></div>
+
+</div>
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
@@ -54,5 +70,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="./node_modules/dygraphs/dist/dygraph.min.js"></script>
+
   </body>
 </html>
