--- a/planning.html
+++ b/planning.html
@@ -82,9 +82,6 @@
   text-decoration: none;
 }
  
-.sidebar a.active {
-
-}
 
 .sidebar a:hover:not(.active) {
 background-color: lightgray; 
@@ -139,6 +136,8 @@ html, body {
         height: 100%;
         margin: 0;
         padding: 0;
+        overflow: hidden;
+
         
   }
   #map {
