Can save multiple plans

--- a/stats.html
+++ b/stats.html
@@ -59,15 +59,18 @@
 
 </script>
 <div class="container">
-  <div id="div_g" style="width:100%; height:300px;"></div>
-
+  <div id="graph_1" style="width:100%; height:300px;"></div>
 </div>
+<div class="container">
+  <div id="graph_2" style="width:100%; height:300px;"></div>
+</div>
+
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="./node_modules/dygraphs/dist/dygraph.min.js"></script>
