--- a/planning.html
+++ b/planning.html
@@ -274,6 +274,7 @@ html, body {
         </div>
         <div class="modal-body">
           <h1 id="modaltext" class="text-center"> GFGH</h1>
+          <h3 id="planno" style="display: none" class="text-center"> Hello </h3>
         </div>
         <div class="modal-footer">
           <div class="row"></div>
