Graph updating properly

--- a/telemetry.html
+++ b/telemetry.html
@@ -134,7 +134,7 @@
             <div class="col-4"> 
             <button id = "share" style="margin-top:8px" class="btn btn-primary"> Share</button>
             </div>
-            <div style="margin-top:8px"  class="col-4">
+            <div id="planselect" style="margin-top:8px"  class="col-4">
            
              
                 <label  for="plan"> Plan No</label>
