--- a/telemetry.html
+++ b/telemetry.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="./node_modules/canvas-gauges/gauge.min.js"> </script>
+    <script src="./node_modules/nipplejs/dist/nipplejs.js" ></script>
     <script type="text/javascript" src="https://static.robotwebtools.org/EventEmitter2/current/eventemitter2.min.js"></script>
     <script type="text/javascript" src="https://static.robotwebtools.org/roslibjs/current/roslib.min.js"></script>
     <title>Portal 2.0</title>
@@ -83,6 +84,14 @@
       display: block;
       height: 150px;
       width: 150px;
+    }
+
+
+    #joystick {
+      position: absolute;
+      z-index: 99;
+      /* left: 90px;
+      bottom: 200px; */
     }
 
     #vid{
@@ -270,6 +279,10 @@
           ></canvas>
 
              </div> 
+
+             <div id="joystick">
+
+             </div>
             
 
 
