--- a/stats.html
+++ b/stats.html
@@ -20,6 +20,11 @@
     .container {
       position: relative;
     }
+
+    .graph-pos {
+      position: relative;
+      bottom: -80px;
+    }
     </style>
 
   </head>
@@ -57,17 +62,84 @@
 </div>
 
 <script src=stats.js>
-
 </script>
-<div class="container">
-  <div id="graph_1" style="width:100%; height:300px;"></div>
-</div>
-<div class="container">
-  <div id="graph_2" style="width:100%; height:300px;"></div>
+
+
+
+<div style="position: relative; top: 30px" class="row">
+  <div class="col-3 text-right">
+      <div class="form-check">
+
+      <input class="form-check-input" type="checkbox" value="" id="accX" onclick="toggleAccX()">
+      <label class="form-check-label" for="accX">
+        AccX
+      </label>
+      </div>
+      <div class="form-check">
+
+      <input class="form-check-input" type="checkbox" value="" id="accY" onclick="toggleAccY()" >
+      <label class="form-check-label" for="accY">
+        AccY
+      </label>
+      </div>
+    
+      <div class="form-check">
+
+        <input class="form-check-input" type="checkbox" value="" id="accZ" onclick="toggleAccZ()">
+        <label class="form-check-label" for="accZ">
+        AccZ
+        </label>
+
+      </div>
+
+  </div>
+   <div class="col-3 text-left">
+      <div class="form-check">
+
+      <input class="form-check-input" type="checkbox" value="" id="rotA" onclick="toggleRotA()">
+      <label class="form-check-label" for="rotA">
+        RotA
+      </label>
+      </div>
+      <div class="form-check">
+
+      <input class="form-check-input" type="checkbox" value="" id="rotB" onclick="toggleRotB()" >
+      <label class="form-check-label" for="rotB">
+        RotB
+      </label>
+      </div>
+    
+      <div class="form-check">
+
+        <input class="form-check-input" type="checkbox" value="" id="rotG" onclick="toggleRotG()">
+        <label class="form-check-label" for="rotG">
+          RotG
+        </label>
+
+      </div>
+
+  </div>
+
+   
+  
 </div>
 
 
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
+<div class="container graph-pos">
+  <div class="row">
+    <div class="col-12">
+      <div  id="graph_1" style= "width:100%; height:500px;"></div>
+    </div>
+  </div>
+
+</div>
+ 
+
+
+
+
+<!-- <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
