--- a/stats.html
+++ b/stats.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./node_modules/dygraphs/dist/dygraph.min.css">
     <script src="/socket.io/socket.io.js"> </script>
 
@@ -119,6 +119,15 @@
       </div>
 
   </div>
+
+  <div class="col-3">
+    <button class="btn btn-lg btn-primary" id="toggle-graph" value= "">Start</button>
+  </div>
+  <div class="col-3">
+    <button class="btn btn-lg btn-danger" id="clear-graph" value= "">Clear</button>
+
+  </div>
+
 
    
   
