--- a/telemetry.html
+++ b/telemetry.html
@@ -100,6 +100,7 @@
       z-index: 99;
       height: 250px;
       width: 500px;
+      display: none;
 
     }
 
@@ -162,7 +163,7 @@
       /* top: 120px;
       right: 10px; */
       display: block;
-      /* height: 150px; */
+      height: 150px;
       width: 150px;
     }
 
@@ -205,6 +206,7 @@
       z-index: 80;
       border-bottom-left-radius: 20px;
       border-bottom-right-radius: 20px;
+      display: none;
 
 
 
@@ -218,6 +220,7 @@
       z-index: 80;
       padding: 5px;
       border-radius: 3px;
+      display: block;
 
     }
 
@@ -241,6 +244,8 @@
       width: 820px;
       padding: 10px;
       border-radius: 0.25em;
+      display: none;
+
       /* width: 50%;
       height: 500px; */
 
@@ -257,6 +262,8 @@
       padding-right: 10px;
       padding-bottom: 5px; 
       border-radius: 0.25em;
+      display: none;
+
     }
 
 
