--- a/telemetry.html
+++ b/telemetry.html
@@ -94,14 +94,12 @@
     }
 
     #pie-chart {
-      position: absolute;
-      top:300px;
-      right: -65px; 
-      z-index: 99;
-      height: 250px;
-      width: 500px;
-      display: none;
-
+    position: absolute;
+    top: 250px;
+    right: 0px;
+    z-index: 99;
+    width: 250px;
+    display: none;
     }
 
     #button-div {
@@ -245,6 +243,7 @@
       padding: 10px;
       border-radius: 0.25em;
       display: none;
+      overflow: auto;
 
       /* width: 50%;
       height: 500px; */
@@ -720,8 +719,9 @@
 
 
     <div id="graph-area">
-      <div class="row">
-        <div class="col">
+
+      <div class="row" >
+        <div class="col" id="graph-drag">
           <div class="row">
             <div class="col-3 text-right">
               <div class="form-check">
@@ -996,6 +996,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" ></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
