Saving config file, implemented default values for segments

--- a/planning.html
+++ b/planning.html
@@ -341,7 +341,7 @@
                   </div>
                 </div>
                 <div class="col-3">
-                    <input class="form-control" id="defCruiseText" placeholder="100">
+                    <input class="form-control" id="defCruiseText" >
 
                 </div>
 
@@ -517,7 +517,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-primary" data-dismiss="modal" id="setting-save">Save changes</button>
             </div>
           </div>
         </div>
