Resets defaults properly

--- a/planning.html
+++ b/planning.html
@@ -325,7 +325,7 @@
           <div class="modal-content">
             <div class="modal-header text-center">
               <h5 class="modal-title w-100">Default settings</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <button type="button" class="close" id="setting-x" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
@@ -516,7 +516,7 @@
 
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-secondary" id="setting-close">Close</button>
               <button type="button" class="btn btn-primary" data-dismiss="modal" id="setting-save">Save changes</button>
             </div>
           </div>
