--- a/planning.html
+++ b/planning.html
@@ -7,17 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css"> -->
+
   <link rel="stylesheet" href="./node_modules/nouislider/distribute/nouislider.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>Portal 2.0</title>
   <style>
     #sidebar {
-      min-width: 250px;
-      max-width: 250px;
+      min-width: 280px;
+      max-width: 280px;
       /* width: 300px; */
       background-color: white;
       border-radius: 25px;
@@ -99,6 +100,15 @@
       background: #007bff;
     }
 
+    .noUi-handle {
+  /* border: 1px solid #D9D9D9; */
+  border: 1px solid lime;
+  border-radius: 3px;
+  background: lime;
+  cursor: default;
+  box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+}
+
     #home-button {
       position: absolute;
       top: 300px;
@@ -179,11 +189,11 @@
           <a class="nav-link" href="planning.html">Mission Planning <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="telemetry.html">Telemetry</a>
+          <a class="nav-link" href="telemetry.html">Teleoperation</a>
         </li>
-        <li class="nav-item ">
+        <!-- <li class="nav-item ">
           <a class="nav-link" href="#">Stats For Geeks</a>
-        </li>
+        </li> -->
       </ul>
 
     </div>
@@ -253,7 +263,7 @@
               <div id="speed-range"> </div>
             </div>
             <div class="col-3">
-              <input type="text" style="width:55px" class="form-control pull-left" placeholder="2" value="2"
+              <input type="text" style="width:70px" class="form-control pull-left" placeholder="2" value="2"
                 id="speed-text">
             </div>
 
@@ -266,7 +276,7 @@
               <div id="max-speed"> </div>
             </div>
             <div class="col-3">
-              <input type="text" style="width:55px" class="form-control pull-left" placeholder="5" value="5"
+              <input type="text" style="width:70px" class="form-control pull-left" placeholder="5" value="5"
                 id="max-text">
             </div>
           </div>
