--- a/telemetry.html
+++ b/telemetry.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css"> -->
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     type='text/css'>
   <link rel="stylesheet" href="./node_modules/dygraphs/dist/dygraph.min.css">
@@ -349,11 +350,11 @@
           <a class="nav-link" href="planning.html">Mission Planning <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link" href="#">Telemetry</a>
+          <a class="nav-link" href="#">Teleoperation</a>
         </li>
-        <li class="nav-item ">
+        <!-- <li class="nav-item ">
           <a class="nav-link" href="stats.html">Stats For Geeks</a>
-        </li>
+        </li> -->
       </ul>
 
     </div>
