default modal resetting properly

--- a/planning.html
+++ b/planning.html
@@ -525,9 +525,19 @@
                   </div>
 
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" id="setting-close">Close</button>
-              <button type="button" class="btn btn-primary" data-dismiss="modal" id="setting-save">Save changes</button>
+            <div class="modal-footer" style="display: block">
+              <div class="row">
+                  <div class="col-2 text-left">
+                      <button type="button" class="btn btn-secondary" id="setting-close" data-dismiss="modal">Close</button>
+  
+                  </div>
+                  <div class="col-10 text-right">
+                      <button type="button" class="btn btn-primary" data-dismiss="modal" id="setting-save">Save changes</button>
+  
+                  </div>
+              </div>
+              
+              
             </div>
           </div>
         </div>
