changed code structure, added corrections

--- a/telemetry.html
+++ b/telemetry.html
@@ -1008,6 +1008,7 @@
   <script src="./node_modules/dygraphs/src/extras/unzoom.js"></script>
   <script src="./node_modules/nouislider/distribute/nouislider.js"> </script>
   <script src="node_modules/wnumb/wNumb.js"></script>
+  <script src="bower_components/victor/build/victor.js"></script>
 </body>
 
 </html>
