--- a/telemetry.html
+++ b/telemetry.html
@@ -84,8 +84,8 @@
 
     .video-small {
       position: absolute;
-      right: 10px;
-      bottom: 60px;
+      right: 50px;
+      bottom: 100px;
       border-style: solid;
       border-width: 2px;
       height: 20%;
@@ -108,6 +108,12 @@
       right: 50px;
       top: 150px;
     }
+    .gm-bundled-control-on-bottom {
+    right: auto !important;
+    left: 25px;
+    top: 50px; 
+    }
+
 
     /* #robotRearCamera {
       position: absolute;
@@ -236,7 +242,7 @@
       position: absolute;
       bottom: 100px;
       left: 400px;
-      background-color: rgba(0, 0, 0, 0.9);
+      background-color: rgba(0, 0, 0);
       /* background-color: white; */
       z-index: 80;
       color: white;
@@ -311,7 +317,7 @@
 
     .map-big {
       position: absolute;
-      height: 100%;
+      height: 93%;
       width: 100%;
     }
 
@@ -330,6 +336,7 @@
       overflow: hidden;
 
     }
+    /*0.5,0.1, 0*/
   </style>
   <script src="/socket.io/socket.io.js"></script>
 
@@ -633,13 +640,14 @@
           </div>
           <div class="row">
             <div class="col">
-              <h5 id="bear-val" style="color: lime"> 0&#176</h5>
+              <h5 id="target-val">0&#176</h5>
 
             </div>
           </div>
           <div class="row">
             <div class="col">
-              <h5> 0 m/s </h5>
+              <h5 id="bear-val" style="color: lime"> 0&#176</h5>
+
             </div>
 
           </div>
@@ -729,14 +737,14 @@
 
                 <input class="form-check-input" type="checkbox" value="" id="accX">
                 <label class="form-check-label" for="accX">
-                  AccX
+                  Heading
                 </label>
               </div>
               <div class="form-check">
 
                 <input class="form-check-input" type="checkbox" value="" id="accY">
                 <label class="form-check-label" for="accY">
-                  AccY
+                  Target
                 </label>
               </div>
 
@@ -744,7 +752,7 @@
 
                 <input class="form-check-input" type="checkbox" value="" id="accZ">
                 <label class="form-check-label" for="accZ">
-                  AccZ
+                  Error
                 </label>
 
               </div>
@@ -986,7 +994,7 @@
 
 
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvw6RInTxTbh-gGvXHdSrWIEE43Je-E40&libraries=geometry"
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAneuZQilQgN7ZZsh-dytE3vcsefxdrVas&libraries=geometry"
     async defer></script>
 
 
